--- a/_sass/_large.scss
+++ b/_sass/_large.scss
@@ -21,3 +21,8 @@
 .site-title {
   padding-left: $spacing-unit;
 }
+
+.key-skills > li .fixed {
+  width: 110px;
+  padding-top: 110px;
+}
