--- a/_sass/_print.scss
+++ b/_sass/_print.scss
@@ -17,3 +17,8 @@ html, body {
   padding: 0;
   background-color: transparent;
 }
+
+.key-skills > li .fixed {
+  width: 110px;
+  padding-top: 110px;
+}
