--- a/css/main.scss
+++ b/css/main.scss
@@ -27,8 +27,6 @@ $content-width:    920px;
 $on-palm:          600px;
 $on-laptop:        800px;
 
-$keyskill-width:   100px;
-
 
 // Using media queries with like this:
 // @include media-query($on-palm) {
